<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>im.bpu</groupId>
	<artifactId>hexachess</artifactId>
	<version>2026.01.04</version>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jackson.version>2.20.1</jackson.version>
		<mysql.version>9.5.0</mysql.version>
		<cdimascio.version>3.2.0</cdimascio.version>
		<jsonwebtoken.version>0.13.0</jsonwebtoken.version>
		<mindrot.version>0.4</mindrot.version>
		<javafx.version>21.0.9</javafx.version>
		<maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<gluonfx.maven.plugin.version>1.0.25</gluonfx.maven.plugin.version>
		<gluonfx.target>host</gluonfx.target>
		<main.class>im.bpu.hexachess.Main</main.class>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>${cdimascio.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jsonwebtoken.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jsonwebtoken.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jsonwebtoken.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>${mindrot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.css</include>
					<include>**/*.fxml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>${main.class}</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.gluonhq</groupId>
				<artifactId>gluonfx-maven-plugin</artifactId>
				<version>${gluonfx.maven.plugin.version}</version>
				<configuration>
					<target>${gluonfx.target}</target>
					<mainClass>${main.class}</mainClass>
					<reflectionList>
						<list>im.bpu.hexachess.LoginWindow</list>
						<list>im.bpu.hexachess.MainWindow</list>
						<list>im.bpu.hexachess.ProfileWindow</list>
						<list>im.bpu.hexachess.RegisterWindow</list>
						<list>im.bpu.hexachess.SearchWindow</list>
						<list>im.bpu.hexachess.SettingsWindow</list>
						<list>im.bpu.hexachess.StartWindow</list>
						<list>io.jsonwebtoken.impl.security.KeysBridge</list>
						<list>javafx.scene.canvas.Canvas</list>
						<list>javafx.scene.control.Button</list>
						<list>javafx.scene.control.ComboBox</list>
						<list>javafx.scene.control.Label</list>
						<list>javafx.scene.control.PasswordField</list>
						<list>javafx.scene.control.ScrollPane</list>
						<list>javafx.scene.control.TextField</list>
						<list>javafx.scene.image.ImageView</list>
						<list>javafx.scene.layout.HBox</list>
						<list>javafx.scene.layout.Priority</list>
						<list>javafx.scene.layout.Region</list>
						<list>javafx.scene.layout.StackPane</list>
						<list>javafx.scene.layout.VBox</list>
					</reflectionList>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>server</id>
			<properties>
				<main.class>im.bpu.hexachess.server.Server</main.class>
			</properties>
		</profile>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<gluonfx.maven.plugin.version>1.0.28</gluonfx.maven.plugin.version>
			</properties>
		</profile>
		<profile>
			<id>android</id>
			<properties>
				<gluonfx.target>android</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>ios</id>
			<properties>
				<gluonfx.target>ios</gluonfx.target>
			</properties>
		</profile>
	</profiles>
</project>